Virtual command support multiple command nodes
Closes #272